# Lime3DS

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  license.txt
.ci/: android.sh  clang-format.sh  ios.sh  license-header.rb  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci-merge.js  clear-cache.yml  format.yml  license-header.yml  publish.yml  stale-issues.yml  transifex.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  GenerateBuildInfo.cmake
common/: Makefile  cmake_install.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: build.gradle.kts  code-style-java.xml  settings.gradle.kts
src/audio_core/: CMakeLists.txt  audio_types.h  codec.cpp  codec.h  cubeb_input.cpp  cubeb_input.h  cubeb_sink.cpp  cubeb_sink.h  dsp_interface.cpp  dsp_interface.h  input.h  input_details.cpp  input_details.h  interpolate.cpp  interpolate.h  null_input.h  null_sink.h  openal_input.cpp  openal_input.h  openal_sink.cpp  openal_sink.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  sink_details.cpp  sink_details.h  static_input.cpp  static_input.h  time_stretch.cpp  time_stretch.h
src/citra/: citra.cpp  citra.rc  config.cpp
src/citra_qt/: aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  citra-qt.rc  compatdb.cpp  compatdb.ui  discord_impl.cpp  game_list.cpp  hotkeys.cpp  loading_screen.cpp  main.cpp  main.ui  qt_image_interface.cpp  uisettings.cpp
src/common/: CMakeLists.txt  android_storage.cpp  android_storage.h  announce_multiplayer_room.h  apple_authorization.cpp  apple_authorization.h  arch.h  archives.h  assert.h  color.h  common_funcs.h  common_paths.h  common_precompiled_headers.h  construct.h  detached_tasks.cpp  detached_tasks.h  error.cpp  error.h  expected.h  file_util.cpp  file_util.h  hash.h  math_util.h  memory_ref.cpp  memory_ref.h  microprofile.cpp  microprofile.h  microprofileui.h  param_package.cpp  param_package.h  polyfill_thread.h  quaternion.h  ring_buffer.h  scm_rev.cpp.in  scm_rev.h  scope_exit.h  settings.cpp  settings.h  string_literal.h  string_util.cpp  (+12 more)
src/core/: 3ds.h  CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  global.h  memory.cpp  memory.h  movie.cpp  movie.h  nus_download.cpp  nus_download.h  perf_stats.cpp  perf_stats.h  savestate.cpp  savestate.h  savestate_data.h  system_titles.cpp  system_titles.h  telemetry_session.cpp  telemetry_session.h
src/dedicated_room/: CMakeLists.txt  lime-room.cpp  lime-room.rc
src/input_common/: CMakeLists.txt  analog_from_button.cpp  analog_from_button.h  keyboard.cpp  keyboard.h  main.cpp  main.h  motion_emu.cpp  motion_emu.h  touch_from_button.cpp  touch_from_button.h
src/installer/: lime3ds.nsi
src/lime/: CMakeLists.txt  config.cpp  config.h  default_ini.h  lime.cpp  lime.rc  main.cpp
src/lime/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/lime_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bootmanager.cpp  (+28 more)
src/lime_room/: CMakeLists.txt
(+1326 files in other folders)
